updated narr data

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2174,6 +2174,18 @@
   url       = {http://www.nd.edu/~networks/Publication%20Categories/01%20Review%20Articles/ScaleFree_Scientific%20Ameri%20288,%2060-69%20(2003).pdf},
 }
 
+@Article{Barabasi2005b,
+  author    = {Barabási, A.-L.},
+  title     = {The origin of bursts and heavy tails in humans dynamics},
+  journal   = {Nature},
+  year      = {2005},
+  volume    = {207},
+  pages     = {435},
+  doi       = {10.1038/nature03459},
+  owner     = {Vincent},
+  timestamp = {2010.12.23},
+}
+
 @Book{Barabasi2015,
   title     = {Network Science},
   publisher = {Cambridge University Press},
@@ -2901,6 +2913,19 @@
   doi       = {10.4169/mathhorizons.23.4.18},
   owner     = {Vincent},
   timestamp = {2016.04.03},
+}
+
+@InCollection{Beveridge2018,
+  author    = {Beveridge, A. and Chemers, M.},
+  title     = {The Game of Game of Thrones: Networked Concordances and Fractal Dramaturgy},
+  booktitle = {Reading Contemporary Serial Television Universes: A Narrative Ecosystem Framework},
+  publisher = {Routledge},
+  year      = {2018},
+  chapter   = {12},
+  pages     = {201-225},
+  doi       = {10.4324/9781315114668-13},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @Article{Bezerianos2010,
@@ -5147,6 +5172,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://www.nap.edu/read/10735/chapter/9},
+}
+
+@Article{Carney2014,
+  author    = {Carney, J. and Wlodarski, R. and Dunbar, R.},
+  title     = {Inference or Enaction? The Impact of Genre on the Narrative Processing of Other Minds},
+  journal   = {PLoS ONE},
+  year      = {2014},
+  volume    = {9},
+  number    = {12},
+  pages     = {e114172},
+  doi       = {10.1371/journal.pone.0114172},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @InCollection{Carrington2011,
@@ -8391,6 +8429,19 @@
   timestamp = {2015.06.14},
 }
 
+@Article{Dunbar1992,
+  author    = {Dunbar, R. I. M.},
+  title     = {Neocortex size as a constraint on group size in primates},
+  journal   = {Journal of Human Evolution},
+  year      = {1992},
+  volume    = {22},
+  number    = {6},
+  pages     = {469-493},
+  doi       = {10.1016/0047-2484(92)90081-j},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
 @Article{Dunbar1993,
   author    = {Dunbar, R. I. M.},
   title     = {Coevolution of neocortical size, group size and language in humans},
@@ -8441,6 +8492,69 @@
   doi       = {10.1007/bf02734142},
   owner     = {Vincent},
   timestamp = {2019.04.05},
+}
+
+@Article{Dunbar2005,
+  author    = {Dunbar, I. M. R.},
+  title     = {Why are Good Writers so Rare? An Evolutionary Perspective on Literature},
+  journal   = {Journal of Cultural and Evolutionary Psychology},
+  year      = {2005},
+  volume    = {3},
+  number    = {1},
+  pages     = {7-21},
+  doi       = {10.1556/jcep.3.2005.1.1},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
+@InCollection{Dunbar2014,
+  author    = {Dunbar, R. I. M.},
+  title     = {Mind the Gap},
+  booktitle = {Lucy to Language: The Benchmark Papers},
+  publisher = {Oxford University Press},
+  year      = {2014},
+  pages     = {3-18},
+  doi       = {10.1093/acprof:osobl/9780199652594.003.0001},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
+@Article{Dunbar2015,
+  author    = {Dunbar, R. I. M. and Arnaboldi, V. and Conti, M. and Passarella, A.},
+  title     = {The structure of online social networks mirrors those in the offline world},
+  journal   = {Social Networks},
+  year      = {2015},
+  volume    = {43},
+  pages     = {39-47},
+  doi       = {10.1016/j.socnet.2015.04.005},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
+@InCollection{Dunbar2016,
+  author    = {Dunbar, R.},
+  title     = {Cognitive and Network Constraints in Real Life and Literature},
+  booktitle = {Maths Meets Myths: Quantitative Approaches to Ancient Narratives},
+  publisher = {Springer},
+  year      = {2016},
+  series    = {Understanding Complex Systems},
+  pages     = {7-19},
+  doi       = {10.1007/978-3-319-39445-9_2},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
+@Article{Dunbar2020,
+  author    = {Dunbar, R. I. M.},
+  title     = {Structure and function in human and primate social networks: implications for diffusion, network stability and health},
+  journal   = {Proceedings of the Royal Society A},
+  year      = {2020},
+  volume    = {476},
+  number    = {2240},
+  pages     = {20200446},
+  doi       = {10.1098/rspa.2020.0446},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @Book{Dunn1914,
@@ -10948,6 +11062,18 @@
   timestamp = {2020.03.16},
 }
 
+@Article{GesseyJones2020,
+  author    = {Gessey-Jones, T. and Connaughton, C. and Dunbar, R. and Kenna, R. and MacCarron, P. and O'Conchobhair, C. and Yose, J.},
+  title     = {Narrative structure of A Song of Ice and Fire creates a fictional world with realistic measures of social complexity},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2020},
+  volume    = {in press},
+  pages     = {202006465},
+  doi       = {10.1073/pnas.2006465117},
+  owner     = {Vincent},
+  timestamp = {2020.11.07},
+}
+
 @Article{Ghalmane2018a,
   author    = {Ghalmane, Z. and El Hassouni, M. and Cherifi, C. and Cherifi, H.},
   title     = {Centrality in Modular Networks},
@@ -12399,6 +12525,19 @@
   url       = {https://www.rug.nl/news/2008/01/01_05?lang=en},
 }
 
+@Article{Hamilton2007,
+  author    = {Hamilton, M. J. and Milne, B. T. and Walker, R. S. and Burger, O. and Brown, J. H.},
+  title     = {The complex structure of hunter{\textendash}gatherer social networks},
+  journal   = {Proceedings of the Royal Society B},
+  year      = {2007},
+  volume    = {274},
+  number    = {1622},
+  pages     = {2195-2203},
+  doi       = {10.1098/rspb.2007.0564},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
 @Article{Hammond1992,
   author    = {Hammond, A.},
   title     = {Encounters of the Third Kind in Stage-Directions in Elizabethan and Jacobean Drama},
@@ -13556,6 +13695,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {http://physics.lnu.edu.ua/jps/2007/1/abs/a022-033.html},
+}
+
+@InCollection{Holovatch2016b,
+  author    = {Holovatch, Y. and Mryglod, O. and Szell, M. and Thurner, S.},
+  title     = {Analyses of a Virtual World},
+  booktitle = {Maths Meets Myths: Quantitative Approaches to Ancient Narratives},
+  publisher = {Springer},
+  year      = {2016},
+  series    = {Understanding Complex Systems},
+  pages     = {115-130},
+  doi       = {10.1007/978-3-319-39445-9_7},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @InCollection{Holovatch2016,
@@ -15268,6 +15420,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Article{Kenna2010,
+  author    = {Kenna, R. and Berche, B.},
+  title     = {Critical mass and the dependency of research quality on group size},
+  journal   = {Scientometrics},
+  year      = {2010},
+  volume    = {86},
+  number    = {2},
+  pages     = {527-540},
+  doi       = {10.1007/s11192-010-0282-9},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
+@Article{Kenna2011,
+  author    = {Kenna, R. and Berche, B.},
+  title     = {Managing research quality: critical mass and optimal academic research group size},
+  journal   = {IMA Journal of Management Mathematics},
+  year      = {2011},
+  volume    = {23},
+  number    = {2},
+  pages     = {195-207},
+  doi       = {10.1093/imaman/dpr021},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
 @InProceedings{Kenna2016,
   author    = {Kenna, R. and Mac Carron, P.},
   title     = {Maths meets myths: Network investigations of ancient narratives},
@@ -15291,6 +15469,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-39445-9_3},
   owner     = {Vincent},
   timestamp = {2016.10.01},
+}
+
+@Collection{Kenna2017a,
+  title     = {Maths Meets Myths: Quantitative Approaches to Ancient Narratives},
+  year      = {2017},
+  doi       = {10.1007/978-3-319-39445-9},
+  author    = {Kenna, R. and MacCarron, M. and MacCarron, P.},
+  owner     = {Vincent},
+  publisher = {Springer},
+  series    = {Understanding Complex Systems},
+  timestamp = {2020.11.17},
 }
 
 @Electronic{Ker2018,
@@ -15558,7 +15747,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
-@InProceedings{Kim2017a,
+@InProceedings{Kim2017c,
   author    = {Kim, E. and Padó, S. and Klinger, R.},
   title     = {Investigating the Relationship between Literary Genres and Emotional Plot Development},
   booktitle = {Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
@@ -15603,6 +15792,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.23},
   url       = {https://www.aclweb.org/anthology/N19-1067.pdf},
+}
+
+@PhdThesis{Kim2020a,
+  author      = {Kim , E.},
+  title       = {Emotions in Literature: Computational Modelling in the Context of Genres and Characters},
+  year        = {2020},
+  type        = {PhD Thesis},
+  institution = {Institut für Maschinelle Sprachverarbeitung, Universität Stuttgart},
+  owner       = {Vincent},
+  timestamp   = {2020.10.30},
+  url         = {http://elib.uni-stuttgart.de/bitstream/11682/11098/1/dissertation.pdf},
 }
 
 @Article{King2009,
@@ -16216,6 +16416,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.29},
   url       = {https://aisel.aisnet.org/ecis2008/116/},
+}
+
+@Article{Krems2013,
+  author    = {Krems, J. A. and Dunbar, R. I. M.},
+  title     = {Clique Size and Network Characteristics in Hyperlink Cinema},
+  journal   = {Human Nature},
+  year      = {2013},
+  volume    = {24},
+  number    = {4},
+  pages     = {414-429},
+  doi       = {10.1007/s12110-013-9177-9},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @Book{Kress2003,
@@ -17561,6 +17774,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.10},
 }
 
+@InProceedings{Lee2020f,
+  author    = {Lee, O-J. and Kim, J.-T.},
+  title     = {Learning Multi-modal Representations of Narrative Multimedia: a Case Study of Webtoons},
+  booktitle = {ACM International Conference on Research in Adaptive and Convergent Systems},
+  year      = {2020},
+  doi       = {10.1145/3400286.3418216},
+  owner     = {Vincent},
+  timestamp = {2020.10.20},
+}
+
 @InProceedings{Lee2020h,
   author        = {Lee, O-J. and Kim, J.-T.},
   title         = {Discovering Mise-en-scène in Movies by Analyzing Scripts},
@@ -17858,6 +18081,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.19},
   url       = {https://archive.org/details/LEWINKurt.PrinciplesOfTopologicalPsychology_201605},
+}
+
+@Article{Lewis2011,
+  author    = {Lewis, P. A. and Rezaie, R. and Brown, R. and Roberts, N. and Dunbar, R. I. M.},
+  title     = {Ventromedial prefrontal volume predicts understanding of others and social network size},
+  journal   = {NeuroImage},
+  year      = {2011},
+  volume    = {57},
+  number    = {4},
+  pages     = {1624-1629},
+  doi       = {10.1016/j.neuroimage.2011.05.030},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @Article{Ley2009,
@@ -19288,6 +19524,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://ora.ox.ac.uk/objects/uuid:43275d59-4db2-49db-b26a-96f21378cfa8},
 }
 
+@Article{MacCarron2016,
+  author    = {Mac Carron, P. and Kaski, K. and Dunbar, R.},
+  title     = {Calling Dunbar's numbers},
+  journal   = {Social Networks},
+  year      = {2016},
+  volume    = {47},
+  pages     = {151-155},
+  doi       = {10.1016/j.socnet.2016.06.003},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
 @Article{MacEachren2005,
   author    = {MacEachren, A. M. and Robinson, A. and Hopper, S. and Gardner, S. and Murray, R. and Gahegan, M. and Hetzler, E.},
   title     = {Visualizing Geospatial Information Uncertainty: What We Know and What We Need to Know},
@@ -20579,6 +20827,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2013.03.11},
 }
 
+@Book{Metz1990,
+  title     = {Film Language: A Semiotics of the Cinema},
+  publisher = {University of Chicago Press},
+  year      = {1990},
+  author    = {Metz, C.},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/F/bo3645302.html},
+}
+
 @Article{Meyer1910,
   author    = {Meyer, K.},
   title     = {Brian Borumha},
@@ -21230,19 +21488,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   publisher = {Nervous and Mental Disease Publishing},
   year      = {1934},
   author    = {Moreno, J. L.},
+  doi       = {10.1037/10648-000},
   owner     = {Vincent},
   timestamp = {2019.04.06},
-  url       = {https://psycnet.apa.org/record/2005-00641-000},
-}
-
-@Book{Moreno1934a,
-  title     = {Who Shall Survive? A New Approach to the Problem of Human Interrelations},
-  publisher = {Beacon House},
-  year      = {1934},
-  author    = {Moreno, J. L.},
-  owner     = {Vincent},
-  timestamp = {2020.07.21},
-  url       = {https://archive.org/details/whoshallsurviven00jlmo},
 }
 
 @Book{Moretti1987,
@@ -23406,6 +23654,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.13},
 }
 
+@InCollection{Palmer2010,
+  author    = {Palmer, A.},
+  title     = {Storyworlds and groups},
+  booktitle = {Introduction to Cognitive Cultural Studies},
+  publisher = {Johns Hopkins University Press},
+  year      = {2010},
+  volume    = {8},
+  pages     = {176-192},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+  url       = {https://www.researchgate.net/publication/296787912_Storyworlds_and_groups},
+}
+
 @InProceedings{Pan2018,
   author    = {Pan, S. and Hu, R. and Long, G. and Jiang, J. and Yao, L. and Zhang, C.},
   title     = {Adversarially Regularized Graph Autoencoder for Graph Embedding},
@@ -24526,6 +24787,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1365-2702.2011.04036.x},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Article{Powell2012,
+  author    = {Powell, J. and Lewis, P. A. and Roberts, N. and García-Fiñana, M. and Dunbar, R. I. M.},
+  title     = {Orbital prefrontal cortex volume predicts social network size: an imaging study of individual differences in humans},
+  journal   = {Proceedings of the Royal Society B},
+  year      = {2012},
+  volume    = {279},
+  number    = {1736},
+  pages     = {2157-2162},
+  doi       = {10.1098/rspb.2011.2574},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @InProceedings{Prabhakaran2012,
@@ -27833,6 +28107,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.11.11},
 }
 
+@Article{Simkin2014,
+  author    = {Simkin, M. V. and Roychowdhury, V. P.},
+  title     = {Stochastic modeling of a serial killer},
+  journal   = {Journal of Theoretical Biology},
+  year      = {2014},
+  volume    = {355},
+  pages     = {111-116},
+  doi       = {10.1016/j.jtbi.2014.03.039},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
+@Article{Simkin2020,
+  author    = {Simkin, M. V. and Roychowdhury, V. P.},
+  title     = {Statistical study of time intervals between murders for serial killers},
+  journal   = {arXiv},
+  year      = {2020},
+  volume    = {physics.soc-ph},
+  pages     = {1811.00664},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+  url       = {https://arxiv.org/abs/1811.00664},
+}
+
 @Book{Simmel1950,
   title     = {The Sociology of Georg Simmel},
   publisher = {The Free Press},
@@ -28587,6 +28885,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.03},
   url       = {https://www.upress.umn.edu/book-division/books/animeas-media-mix},
+}
+
+@Book{Steiner1995,
+  title     = {Russian Formalism: A Metapoetics},
+  publisher = {Cambridge University Press},
+  year      = {1995},
+  author    = {Steiner, P.},
+  volume    = {8},
+  series    = {The Cambridge History of Literary Criticism},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+  url       = {https://www.jstor.org/stable/10.7591/j.ctt1g69xpg},
 }
 
 @Article{Stella2018,
@@ -30426,6 +30736,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1859726},
 }
 
+@Article{Vajna2013,
+  author    = {Vajna, S. and Tóth, B. and Kertész, J.},
+  title     = {Modelling bursty time series},
+  journal   = {New Journal of Physics},
+  year      = {2013},
+  volume    = {15},
+  number    = {10},
+  pages     = {103023},
+  doi       = {10.1088/1367-2630/15/10/103023},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
+}
+
 @InProceedings{Vala2015,
   author    = {Vala, H. and Jurgens, D. and Piper, A. and Ruths, D.},
   title     = {Mr. Bennet, his coachman, and the Archbishop walk into a bar but only one of them gets recognized: On The Difficulty of Detecting Characters in Literary Texts},
@@ -31707,6 +32030,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-642-55285-4_7},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Article{Wiessner2014,
+  author    = {Wiessner, P. W.},
+  title     = {Embers of society: Firelight talk among the Ju'hoansi Bushmen},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2014},
+  volume    = {111},
+  number    = {39},
+  pages     = {14027-14035},
+  doi       = {10.1073/pnas.1404212111},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @InProceedings{Wieting2016,
@@ -33397,6 +33733,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/LCOMM.2004.823426},
   owner     = {Vincent},
   timestamp = {2010.08.03},
+}
+
+@Article{Zhou2005,
+  author    = {Zhou, W.-X. and Sornette, D. and Hill, R. A. and Dunbar, R. I. M.},
+  title     = {Discrete hierarchical organization of social group sizes},
+  journal   = {Proceedings of the Royal Society B: Biological Sciences},
+  year      = {2005},
+  volume    = {272},
+  number    = {1561},
+  pages     = {439-444},
+  doi       = {10.1098/rspb.2004.2970},
+  owner     = {Vincent},
+  timestamp = {2020.11.17},
 }
 
 @Article{Zhou2007,
