--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -223,6 +223,19 @@
   timestamp = {2019.06.27},
 }
 
+@Article{Adams2018a,
+  author    = {Adams, C. R.},
+  title     = {Uncomfortable Truths: Lifewriting, Trauma and Survivance in Marlon James’s A Brief History of Seven Killings},
+  journal   = {Journal of West Indian Literature},
+  year      = {2018},
+  volume    = {26},
+  number    = {2},
+  pages     = {96-109},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+  url       = {https://search.proquest.com/openview/a0e43746a2242fe6060610b3dbdb2da6/1},
+}
+
 @InCollection{Addison2001,
   author    = {Addison, J.},
   title     = {Cato},
@@ -2525,6 +2538,19 @@
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {http://www.digitalhumanities.org/dhq/vol/5/2/000094/000094.html},
+}
+
+@Article{Beal2012,
+  author    = {Beal, W.},
+  title     = {The Form and Politics of Networks in Jean Toomer's Cane},
+  journal   = {American Literary History},
+  year      = {2012},
+  volume    = {24},
+  number    = {4},
+  pages     = {658-679},
+  doi       = {10.1093/alh/ajs043},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
 }
 
 @Article{Bearman1999,
@@ -7176,6 +7202,19 @@
   timestamp = {2019.04.08},
 }
 
+@Article{Da2019,
+  author    = {Da, N. Z.},
+  title     = {The Computational Case against Computational Literary Studies},
+  journal   = {Critical Inquiry},
+  year      = {2019},
+  volume    = {45},
+  number    = {3},
+  pages     = {601-639},
+  doi       = {10.1086/702594},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+}
+
 @Article{Dagan1999,
   author    = {Dagan, I. and Lee, L. and Pereira, F. C. N.},
   title     = {Similarity-Based Models of Word Cooccurrence Probabilities},
@@ -7278,6 +7317,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {http://km.aifb.kit.edu/ws/semsearch09/semse2009_22.pdf},
+}
+
+@Book{Dames2007,
+  title     = {The Physiology of the Novel: Reading, Neural Science, and the Form of Victorian Fiction},
+  publisher = {Oxford University Press},
+  year      = {2007},
+  author    = {Dames, N.},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+  url       = {https://global.oup.com/academic/product/the-physiology-of-the-novel-9780199208968},
 }
 
 @InProceedings{Danescu2011,
@@ -7449,6 +7498,16 @@
   doi       = {10.1002/9781118032343},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Book{Daston2007,
+  title     = {Objectivity},
+  publisher = {Zone Books},
+  year      = {2007},
+  author    = {Daston, L. and Galison, P.},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+  url       = {https://press.princeton.edu/books/paperback/9781890951795/objectivity},
 }
 
 @Article{dAstous2002,
@@ -11010,6 +11069,19 @@
   url       = {https://books.google.fr/books/about/Quentin_Tarantino.html?id=6vewE_5azzoC&redir_esc=y},
 }
 
+@Article{Gallagher2000,
+  author    = {Gallagher, C.},
+  title     = {Formalism and Time},
+  journal   = {Modern Language Quarterly},
+  year      = {2000},
+  volume    = {61},
+  number    = {1},
+  pages     = {229-251},
+  doi       = {10.1215/00267929-61-1-229},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+}
+
 @Book{Gallaway1950,
   title     = {Constructing a Play},
   publisher = {Prentice-Hall},
@@ -11031,6 +11103,16 @@
   doi       = {10.1016/s1364-6613(98)01262-5},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Book{Galloway2007,
+  title     = {The Exploit: A Theory of Networks},
+  publisher = {University of Minnesota Press},
+  year      = {2007},
+  author    = {Galloway, A. R. and Thacker, E.},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+  url       = {https://www.upress.umn.edu/book-division/books/the-exploit},
 }
 
 @InProceedings{Gamon2004,
@@ -11230,6 +11312,19 @@
   owner     = {Vincent},
   timestamp = {2020.11.30},
   url       = {http://www.stat.columbia.edu/~gelman/arm/},
+}
+
+@InCollection{Genette1979,
+  author    = {Genette, G.},
+  title     = {Order, Duration, and Frequency},
+  booktitle = {Narrative Dynamics: Essays on Time, Plot, Closure, and Frames},
+  publisher = {Ohio State University Press},
+  year      = {1979},
+  editor    = {Richardson, B.},
+  pages     = {25-34},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+  url       = {https://www.barnesandnoble.com/w/narrative-dynamics-brian-richardson/1121771553},
 }
 
 @Book{Genette1980,
@@ -13108,6 +13203,19 @@
   url       = {https://global.oup.com/academic/product/shakespeare-and-literary-theory-9780199573387},
 }
 
+@Article{Harrison2017,
+  author    = {Harrison, S.-M.},
+  title     = {Global Sisyphus: Rereading the Jamaican 1960s through A Brief History of Seven Killings},
+  journal   = {Small Axe: A Caribbean Journal of Criticism},
+  year      = {2017},
+  volume    = {21},
+  number    = {3},
+  pages     = {85-97},
+  doi       = {10.1215/07990537-4272013},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+}
+
 @InProceedings{Hasan2013,
   author    = {Hasan, K. S. and Ng, V.},
   title     = {Extralinguistic constraints on stance recognition in ideological debates},
@@ -14780,6 +14888,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.patrickjagoda.com/books/network-aesthetics},
 }
 
+@InCollection{Jagoda2017,
+  author    = {Jagoda, P.},
+  title     = {Networks in Literature and Media},
+  booktitle = {Oxford Research Encyclopedia of Literature},
+  publisher = {Oxford University Press},
+  year      = {2017},
+  editor    = {Rabinowitz, P.},
+  doi       = {10.1093/acrefore/9780190201098.013.135},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+}
+
 @InProceedings{Jahan2018,
   author    = {Jahan, L. and Chauhan, G. and Finlayson, M. A.},
   title     = {A new approach to animacy detection},
@@ -15227,6 +15347,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2016.494},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Johnson2018,
+  author    = {Johnson, J. M.},
+  title     = {Markup Bodies},
+  journal   = {Social Text},
+  year      = {2018},
+  volume    = {36},
+  number    = {4},
+  pages     = {57-79},
+  doi       = {10.1215/01642472-7145658},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
 }
 
 @Book{Johnston1992,
@@ -21269,6 +21402,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
+@Article{Mendelson1976,
+  author    = {Mendelson, E.},
+  title     = {Encyclopedic Narrative: From Dante to Pynchon},
+  journal   = {Modern Language Notes},
+  year      = {1976},
+  volume    = {91},
+  number    = {6},
+  pages     = {1267},
+  doi       = {10.2307/2907136},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+}
+
 @Article{Merchant2018,
   author    = {Merchant, B.},
   title     = {When an AI Goes Full Jack Kerouac},
@@ -23208,6 +23354,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://aclweb.org/anthology/papers/P/P10/P10-1142/},
+}
+
+@InCollection{Ngai2012,
+  author    = {Ngai, S.},
+  title     = {Network Aesthetics: Juliana Spahr's the Transformation and Bruno Latour's Reassembling the Social},
+  booktitle = {American Literature's Aesthetic Dimensions},
+  publisher = {Columbia University Press},
+  year      = {2012},
+  editor    = {Weinstein, C. and Looby, C.},
+  pages     = {367-392},
+  doi       = {10.7312/columbia/9780231156172.003.0017},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
 }
 
 @Article{Ngo2005,
@@ -25294,6 +25453,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@Book{Porter1996,
+  title     = {Trust in Numbers: The Pursuit of Objectivity in Science and Public Life},
+  publisher = {Princeton University Press},
+  year      = {1996},
+  author    = {Porter, T. M.},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+  url       = {https://press.princeton.edu/books/paperback/9780691208411/trust-in-numbers},
+}
+
 @InProceedings{Post2011,
   author    = {Post, M.},
   title     = {Judging grammaticality with tree substitution grammar derivations},
@@ -25463,6 +25632,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/10714421.2016.1237717},
   owner     = {Vincent},
   timestamp = {2020.07.21},
+}
+
+@Article{Pressman2006,
+  author    = {Pressman, J.},
+  title     = {House of Leaves: Reading the Networked Novel},
+  journal   = {Studies in American Fiction},
+  year      = {2006},
+  volume    = {34},
+  pages     = {107-128},
+  doi       = {10.1353/saf.2006.0015},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
 }
 
 @Article{Preston1978,
@@ -30627,6 +30808,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2014.06.08},
 }
 
+@Article{Tenen2018,
+  author    = {Tenen, D. Y.},
+  title     = {Toward a Computational Archaeology of Fictional Space},
+  journal   = {New Literary History},
+  year      = {2018},
+  volume    = {49},
+  number    = {1},
+  pages     = {119-147},
+  doi       = {10.1353/nlh.2018.0005},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+}
+
 @Article{Thelwall2016,
   author    = {Thelwall, M. and Kousha, K.},
   title     = {Goodreads: A social network site for book readers},
@@ -30683,6 +30877,33 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.hsdl.org/?abstract&did=485291},
+}
+
+@Article{Thomas2016,
+  author    = {Thomas, L.},
+  title     = {Forms of Duration: Preparedness, the Mars Trilogy, and the Management of Climate Change},
+  journal   = {American Literature},
+  year      = {2016},
+  volume    = {88},
+  number    = {1},
+  pages     = {159-184},
+  doi       = {10.1215/00029831-3453696},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+}
+
+@InCollection{Thomas2020,
+  author    = {Thomas, L.},
+  title     = {Modeling Long Novels: Network Analysis and A Brief History of Seven Killings},
+  booktitle = {The Palgrave Handbook of Twentieth and Twenty-First Century Literature and Science},
+  publisher = {Springer},
+  year      = {2020},
+  series    = {Palgrave Handbooks of Literature and Science},
+  chapter   = {37},
+  pages     = {653-667},
+  doi       = {10.1007/978-3-030-48244-2_37},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
 }
 
 @Book{Thompson2003,
@@ -32122,6 +32343,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Walonen2018,
+  author    = {Walonen, M. K.},
+  title     = {Violence, Diasporic Transnationalism, and Neo-imperialism in A Brief History of Seven Killings},
+  journal   = {Small Axe: A Caribbean Journal of Criticism},
+  year      = {2018},
+  volume    = {22},
+  number    = {3},
+  pages     = {1-12},
+  doi       = {10.1215/07990537-7249076},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+}
+
 @InProceedings{Walshaw2001,
   author    = {Walshaw, C.},
   title     = {A Multilevel Algorithm for Force-Directed Graph Drawing},
@@ -32667,6 +32901,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@Book{Wernimont2018,
+  title     = {Numbered Lives: Life and Death in Quantum Media},
+  publisher = {MIT Press},
+  year      = {2018},
+  author    = {Wernimont, J.},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
+  url       = {https://mitpress.mit.edu/books/numbered-lives},
+}
+
 @Book{West2001,
   title     = {Introduction to Graph Theory},
   publisher = {Prentice Hall},
@@ -32996,6 +33240,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {https://archive.org/details/IntroductionToGraphTheory},
+}
+
+@Article{Wilson2015,
+  author    = {Wilson, S.},
+  title     = {Black Folk by the Numbers: Quantification in Du Bois},
+  journal   = {American Literary History},
+  year      = {2015},
+  pages     = {ajv062},
+  doi       = {10.1093/alh/ajv062},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
 }
 
 @Article{Wingstedt2010,
@@ -34180,6 +34435,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://dl.acm.org/citation.cfm?id=944964},
+}
+
+@Book{Zemka2012,
+  title     = {Time and the Moment in Victorian Literature and Society},
+  publisher = {Cambridge University Press},
+  year      = {2012},
+  author    = {Zemka, S.},
+  doi       = {0.1017/CBO9781139017565},
+  owner     = {Vincent},
+  timestamp = {2020.12.01},
 }
 
 @InProceedings{Zeng2014,
